[gd_scene load_steps=45 format=3 uid="uid://b8g10g5id7xy5"]

[ext_resource type="Script" uid="uid://ta8fr43cvndg" path="res://scenes/maps/objective/objective.gd" id="1_cfv35"]
[ext_resource type="Texture2D" uid="uid://bf2r4428ly30v" path="res://scenes/maps/objective/assets/textures/tower_die_01.png" id="3_cub0e"]
[ext_resource type="Texture2D" uid="uid://bnyldc46c4b7o" path="res://scenes/maps/objective/assets/textures/tower_die_02.png" id="4_wnumk"]
[ext_resource type="Texture2D" uid="uid://bq3j3fnppl22y" path="res://scenes/maps/objective/assets/textures/tower_die_03.png" id="5_lujul"]
[ext_resource type="Texture2D" uid="uid://pw1g5o1hofmy" path="res://scenes/maps/objective/assets/textures/tower_die_04.png" id="6_p5vl8"]
[ext_resource type="Texture2D" uid="uid://cus8ri84kkacq" path="res://scenes/maps/objective/assets/textures/tower_die_05.png" id="7_2sye3"]
[ext_resource type="Texture2D" uid="uid://2wn6xwst6jxr" path="res://scenes/maps/objective/assets/textures/tower_die_06.png" id="8_ha1bd"]
[ext_resource type="Texture2D" uid="uid://d3uy3kvhujnch" path="res://scenes/maps/objective/assets/textures/tower_die_07.png" id="9_rquup"]
[ext_resource type="Texture2D" uid="uid://cygl0hx3jqr80" path="res://scenes/maps/objective/assets/textures/tower_die_08.png" id="10_vxhxr"]
[ext_resource type="Texture2D" uid="uid://d3j0400d1b5go" path="res://scenes/maps/objective/assets/textures/tower_die_09.png" id="11_8kbmb"]
[ext_resource type="Texture2D" uid="uid://ljwlxik1w1ac" path="res://scenes/maps/objective/assets/textures/tower_die_10.png" id="12_7w5xl"]
[ext_resource type="Texture2D" uid="uid://dymnpjy4w4d5f" path="res://scenes/maps/objective/assets/textures/tower_die_11.png" id="13_84jrq"]
[ext_resource type="Texture2D" uid="uid://cfac2whu0eux7" path="res://scenes/maps/objective/assets/textures/tower_die_12.png" id="14_r0el5"]
[ext_resource type="Texture2D" uid="uid://d168khymb2dqj" path="res://scenes/maps/objective/assets/textures/tower_die_13.png" id="15_s3pl5"]
[ext_resource type="Texture2D" uid="uid://bpv6quvobdysy" path="res://scenes/maps/objective/assets/textures/tower_die_14.png" id="16_f8txk"]
[ext_resource type="Texture2D" uid="uid://b8isoqs00nwk6" path="res://scenes/maps/objective/assets/textures/tower_die_15.png" id="17_4mcbx"]
[ext_resource type="Texture2D" uid="uid://de6tatwip3kec" path="res://scenes/maps/objective/assets/textures/tower_die_16.png" id="18_g7ugp"]
[ext_resource type="Texture2D" uid="uid://ds0s0540unolt" path="res://scenes/maps/objective/assets/textures/tower_die_17.png" id="19_b04xt"]
[ext_resource type="Texture2D" uid="uid://dgw48mmn6euhb" path="res://scenes/maps/objective/assets/textures/tower_die_18.png" id="20_j5nuh"]
[ext_resource type="Texture2D" uid="uid://cakt2m6varoq8" path="res://scenes/maps/objective/assets/textures/tower_die_19.png" id="21_cvh42"]
[ext_resource type="Texture2D" uid="uid://1yr36gr23ufx" path="res://scenes/maps/objective/assets/textures/tower_die_20.png" id="22_1jlfm"]
[ext_resource type="Texture2D" uid="uid://bqcwwfmw1u0sp" path="res://scenes/maps/objective/assets/textures/tower_die_21.png" id="23_uy0jp"]
[ext_resource type="Texture2D" uid="uid://clqsjms8jck5b" path="res://scenes/maps/objective/assets/textures/tower_die_22.png" id="24_gtr8w"]
[ext_resource type="Texture2D" uid="uid://c3w7oetg8ncm1" path="res://scenes/maps/objective/assets/textures/tower_die_23.png" id="25_ay8oc"]
[ext_resource type="Texture2D" uid="uid://dwdial11jib1" path="res://scenes/maps/objective/assets/textures/tower_die_24.png" id="26_528hl"]
[ext_resource type="Texture2D" uid="uid://dd65x01g1ehm3" path="res://scenes/maps/objective/assets/textures/tower_die_25.png" id="27_pd2xk"]
[ext_resource type="Texture2D" uid="uid://cs1utlvjtc8cq" path="res://scenes/maps/objective/assets/textures/tower_die_26.png" id="28_61m2w"]
[ext_resource type="Texture2D" uid="uid://bno87jxtfcdaw" path="res://scenes/maps/objective/assets/textures/tower_die_27.png" id="29_h0eho"]
[ext_resource type="Texture2D" uid="uid://b28crybpeb6lb" path="res://scenes/maps/objective/assets/textures/tower_die_28.png" id="30_0lmgi"]
[ext_resource type="Texture2D" uid="uid://uckaycrcqmoy" path="res://scenes/maps/objective/assets/textures/tower_die_29.png" id="31_wc8rs"]
[ext_resource type="Texture2D" uid="uid://ctclyfnadwkbx" path="res://scenes/maps/objective/assets/textures/tower_die_30.png" id="32_63tih"]
[ext_resource type="Texture2D" uid="uid://cxttpq65kj7ue" path="res://scenes/maps/objective/assets/textures/tower_die_31.png" id="33_pxx4q"]
[ext_resource type="Texture2D" uid="uid://l2b1hl5ypk1a" path="res://scenes/maps/objective/assets/textures/tower_die_32.png" id="34_no84j"]
[ext_resource type="Texture2D" uid="uid://do8epu6ycuwjr" path="res://scenes/maps/objective/assets/textures/tower_die_33.png" id="35_gql73"]
[ext_resource type="Texture2D" uid="uid://dnkft88xpcuet" path="res://scenes/maps/objective/assets/textures/tower_die_34.png" id="36_pe1fm"]
[ext_resource type="Texture2D" uid="uid://cdllqokhyh40k" path="res://scenes/maps/objective/assets/textures/tower_die_35.png" id="37_tht1t"]
[ext_resource type="Texture2D" uid="uid://cfj57fd52u3gk" path="res://scenes/maps/objective/assets/textures/tower_die_36.png" id="38_e6cl4"]
[ext_resource type="Texture2D" uid="uid://b824ssfhvvol" path="res://scenes/maps/objective/assets/textures/tower_die_37.png" id="39_2160v"]
[ext_resource type="Texture2D" uid="uid://d4amhgy5apbge" path="res://scenes/maps/objective/assets/textures/tower_die_38.png" id="40_gyhcc"]
[ext_resource type="Texture2D" uid="uid://pd1cxdv144e1" path="res://scenes/maps/objective/assets/textures/tower_idle_00.png" id="41_pjiub"]
[ext_resource type="Texture2D" uid="uid://dvclqddaw6mvk" path="res://scenes/maps/objective/assets/textures/tower_die_39.png" id="41_tvigi"]
[ext_resource type="PackedScene" uid="uid://x6ivhnvyfp45" path="res://entities/explosion_vfx/explosion.tscn" id="43_ouhuc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_coix1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_cub0e")
}, {
"duration": 1.0,
"texture": ExtResource("4_wnumk")
}, {
"duration": 1.0,
"texture": ExtResource("5_lujul")
}, {
"duration": 1.0,
"texture": ExtResource("6_p5vl8")
}, {
"duration": 1.0,
"texture": ExtResource("7_2sye3")
}, {
"duration": 1.0,
"texture": ExtResource("8_ha1bd")
}, {
"duration": 1.0,
"texture": ExtResource("9_rquup")
}, {
"duration": 1.0,
"texture": ExtResource("10_vxhxr")
}, {
"duration": 1.0,
"texture": ExtResource("11_8kbmb")
}, {
"duration": 1.0,
"texture": ExtResource("12_7w5xl")
}, {
"duration": 1.0,
"texture": ExtResource("13_84jrq")
}, {
"duration": 1.0,
"texture": ExtResource("14_r0el5")
}, {
"duration": 1.0,
"texture": ExtResource("15_s3pl5")
}, {
"duration": 1.0,
"texture": ExtResource("16_f8txk")
}, {
"duration": 1.0,
"texture": ExtResource("17_4mcbx")
}, {
"duration": 1.0,
"texture": ExtResource("18_g7ugp")
}, {
"duration": 1.0,
"texture": ExtResource("19_b04xt")
}, {
"duration": 1.0,
"texture": ExtResource("20_j5nuh")
}, {
"duration": 1.0,
"texture": ExtResource("21_cvh42")
}, {
"duration": 1.0,
"texture": ExtResource("22_1jlfm")
}, {
"duration": 1.0,
"texture": ExtResource("23_uy0jp")
}, {
"duration": 1.0,
"texture": ExtResource("24_gtr8w")
}, {
"duration": 1.0,
"texture": ExtResource("25_ay8oc")
}, {
"duration": 1.0,
"texture": ExtResource("26_528hl")
}, {
"duration": 1.0,
"texture": ExtResource("27_pd2xk")
}, {
"duration": 1.0,
"texture": ExtResource("28_61m2w")
}, {
"duration": 1.0,
"texture": ExtResource("29_h0eho")
}, {
"duration": 1.0,
"texture": ExtResource("30_0lmgi")
}, {
"duration": 1.0,
"texture": ExtResource("31_wc8rs")
}, {
"duration": 1.0,
"texture": ExtResource("32_63tih")
}, {
"duration": 1.0,
"texture": ExtResource("33_pxx4q")
}, {
"duration": 1.0,
"texture": ExtResource("34_no84j")
}, {
"duration": 1.0,
"texture": ExtResource("35_gql73")
}, {
"duration": 1.0,
"texture": ExtResource("36_pe1fm")
}, {
"duration": 1.0,
"texture": ExtResource("37_tht1t")
}, {
"duration": 1.0,
"texture": ExtResource("38_e6cl4")
}, {
"duration": 1.0,
"texture": ExtResource("39_2160v")
}, {
"duration": 1.0,
"texture": ExtResource("40_gyhcc")
}, {
"duration": 1.0,
"texture": ExtResource("41_tvigi")
}],
"loop": false,
"name": &"die",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("41_pjiub")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_cub0e")
}, {
"duration": 1.0,
"texture": ExtResource("4_wnumk")
}, {
"duration": 1.0,
"texture": ExtResource("5_lujul")
}, {
"duration": 1.0,
"texture": ExtResource("7_2sye3")
}, {
"duration": 1.0,
"texture": ExtResource("23_uy0jp")
}, {
"duration": 1.0,
"texture": ExtResource("23_uy0jp")
}, {
"duration": 1.0,
"texture": ExtResource("23_uy0jp")
}, {
"duration": 1.0,
"texture": ExtResource("23_uy0jp")
}],
"loop": true,
"name": &"low_health ",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxjbe"]
size = Vector2(320, 256)

[node name="Objective" type="Area2D"]
collision_layer = 16
script = ExtResource("1_cfv35")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_coix1")
animation = &"die"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 22)
shape = SubResource("RectangleShape2D_pxjbe")

[node name="Explosion" parent="." instance=ExtResource("43_ouhuc")]

[connection signal="body_entered" from="." to="." method="_on_objective_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
